--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "node-xlsx": "^0.24.0",
     "nodemon": "^3.1.11",
     "sequelize": "^6.37.7",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   }
 }
